--- a/Leaflet-Step-1/static/css/style.css
+++ b/Leaflet-Step-1/static/css/style.css
@@ -8,3 +8,16 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  line-height: 18px;
+  color: #000000;
+  background-color: #C0C0C0;
+}
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 1;
+}
